work in progress

--- a/pages/index.html
+++ b/pages/index.html
@@ -26,34 +26,34 @@
 
     <div class="homescreen">
         <div class="widget" data-title="Profile" data-widget-id="profile">
-            <img src="{{ url_for('static', filename='icons/user.svg') }}" alt="Profile">
+            <img src="./items/icons/user.svg" alt="Profile">
         </div>
         <div class="widget" data-title="Documents" data-widget-id="documents">
-            <img src="{{ url_for('static', filename='icons/folder.svg') }}" alt="Documents">
+            <img src="./items/icons/folder.svg" alt="Documents">
         </div>
         <div class="widget" data-title="Settings" data-widget-id="settings">
-            <img src="{{ url_for('static', filename='icons/settings.svg') }}" alt="Settings">
+            <img src="./items/icons/settings.svg" alt="Settings">
         </div>
         <div class="widget" data-title="Contacts" data-widget-id="contacts">
-            <img src="{{ url_for('static', filename='icons/contacts.svg') }}" alt="Contacts">
+            <img src="./items/icons/contacts.svg" alt="Contacts">
         </div>
         <div class="widget" data-title="Work" data-widget-id="work">
-            <img src="{{ url_for('static', filename='icons/briefcase.svg') }}" alt="Work">
+            <img src="./items/icons/briefcase.svg" alt="Work">
         </div>
         <div class="widget" data-title="Network" data-widget-id="network">
-            <img src="{{ url_for('static', filename='icons/globe.svg') }}" alt="Network">
+            <img src="./items/icons/globe.svg" alt="Network">
         </div>
         <div class="widget" data-title="Projects" data-widget-id="projects">
-            <img src="{{ url_for('static', filename='icons/code.svg') }}" alt="Projects">
+            <img src="./items/icons/code.svg" alt="Projects">
         </div>
         <div class="widget" data-title="About" data-widget-id="about">
-            <img src="{{ url_for('static', filename='icons/info.svg') }}" alt="About">
+            <img src="./items/icons/info.svg" alt="About">
         </div>
         <div class="widget" data-title="Timeline" data-widget-id="timeline">
-            <img src="{{ url_for('static', filename='icons/hourglass.svg') }}" alt="Timeline">
+            <img src="./items/icons/hourglass.svg" alt="Timeline">
         </div>
     </div>
 
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
